--- a/wasd-form/styles/vars.css
+++ b/wasd-form/styles/vars.css
@@ -2,10 +2,13 @@
     --main-bg: #0E0E0E;
     --bg-secondary: #161616;
     --txt-color: white;
+    --bg-purple: #5e06a7;
+    --bg-pink: #61085e;
 
     --white: #fff;
     --purple: #6911F9;
     --pink: #EA0CE1;
+    --blue: #1a1952;
 
 
 }
