--- a/wasd-form/styles/vars.css
+++ b/wasd-form/styles/vars.css
@@ -1,6 +1,7 @@
 :root {
     --main-bg: #0E0E0E;
     --bg-secondary: #161616;
+    --bg-lighter: #2b2a2a;
     --txt-color: white;
     --bg-purple: #5e06a7;
     --bg-pink: #61085e;
@@ -9,6 +10,5 @@
     --purple: #6911F9;
     --pink: #EA0CE1;
     --blue: #1a1952;
-
-
+    --blurple: #5865F2;
 }
