--- a/wasd-form/styles/fourms.module.css
+++ b/wasd-form/styles/fourms.module.css
@@ -77,3 +77,33 @@
     height: 70px;
 
 }
+
+.topic_header {
+    width: 100%;
+    height: auto;
+    background-color: var(--bg-secondary);
+    border-radius: 7px;
+    padding: 10px 30px;
+}
+
+.topic_header .header {
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.thread_create {
+    padding: 10px 30px;
+    border: none;
+    border-radius: 4px;
+    font-family: "Roboto", sans-serif;
+    background-color: var(--pink);
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.thread_create_container {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    float: right;
+}
