--- a/wasd-form/styles/globals.css
+++ b/wasd-form/styles/globals.css
@@ -2,11 +2,11 @@
 
 html,
 body {
-  padding: 0;
+  padding: 0 !important;
   margin: 0;
-  color: var(--white);
-  background-color: var(--main-bg);
-  font-family: "Roboto", sans-serif;
+  color: var(--white) !important;
+  background-color: var(--main-bg) !important;
+  font-family: "Roboto", sans-serif !important;
 }
 
 a {
