--- a/wasd-form/styles/vars.css
+++ b/wasd-form/styles/vars.css
@@ -8,6 +8,7 @@
 
     --white: #fff;
     --purple: #6911F9;
+    --purple-transparent: #6a11f963;
     --pink: #EA0CE1;
     --blue: #1a1952;
     --dark-blue: #0d0d2e;
