--- a/wasd-form/styles/globals.css
+++ b/wasd-form/styles/globals.css
@@ -92,6 +92,35 @@ a {
   margin-top: 50px;
 }
 
+
+.box-error {
+  padding: 10px 15px;
+  background-color: rgba(255, 0, 119, 0.295);
+  border-left: 3px solid rgba(255, 0, 119, 0.5);
+}
+
+.box-error h3 {
+  margin: 0;
+  padding: 0;
+}
+
+.box-error p {
+  margin: 0;
+  margin-top: 2px;
+  font-size: 14px;
+}
+
+.loader_ {
+  vertical-align: text-top ;
+  display: inline-block;
+  border-top: 2px solid var(--pink);
+  border-radius: 50%;
+  height: 15px !important;
+  width: 15px !important;
+  -webkit-animation: spin 1s linear infinite; /* Safari */
+  animation: spin 1s linear infinite;
+}
+
 @keyframes loading-logo {
   0% {
     scale: 1;
@@ -102,4 +131,14 @@ a {
   100% {
     scale: 1;
   }
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
