--- a/wasd-form/styles/fourms.module.css
+++ b/wasd-form/styles/fourms.module.css
@@ -99,6 +99,22 @@
 
 .category_top_header {
     padding: 0px 20px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.add_topic_btn {
+    display: inline-block;
+    height: 40px;
+    margin-left: auto;
+    color: white;
+    background-color: var(--pink);
+    padding: 0px 15px;
+    border: none;
+    font-family: "Roboto", sans-serif;
+    font-size: 15px;
+    border-radius: 7px;
 }
 
 .category_topics_container {
@@ -106,6 +122,7 @@
 }
 
 .category_header {
+    display: inline-block;
     font-size: 18px;
     font-weight: 400;
 }
@@ -399,4 +416,27 @@
 .reply_draft_editor  {
     width: 100%;
     height: auto;
+}
+
+
+.model_popup_container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: auto;
+    min-height: 300px;
+    width: 50%;
+    background-color: var(--bg-secondary);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+    padding: 10px 25px;
+}
+
+.model_popup_greyed {
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.8);
 }
