--- a/wasd-form/styles/vars.css
+++ b/wasd-form/styles/vars.css
@@ -6,6 +6,8 @@
     --bg-purple: #5e06a7;
     --bg-pink: #61085e;
 
+    --border-1: purple;
+
     --white: #fff;
     --purple: #6911F9;
     --purple-transparent: #6a11f963;
