--- a/wasd-form/styles/globals.css
+++ b/wasd-form/styles/globals.css
@@ -122,6 +122,27 @@ a {
 }
 
 
+.file-uploader_container {
+  min-height: 150px;
+  height: auto;
+  padding: 10px;
+  width: 100%;
+  background-color: var(--bg-lighter);
+  border: 2px solid var(--purple);
+  text-align: center;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+
+
+
+.file-uploader_input {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+}
+
 @keyframes loading-logo {
   0% {
     scale: 1;
