--- a/wasd-form/styles/globals.css
+++ b/wasd-form/styles/globals.css
@@ -127,6 +127,7 @@ a {
   height: auto;
   padding: 10px;
   width: 100%;
+  left: 0;
   background-color: var(--bg-lighter);
   border: 2px solid var(--purple);
   text-align: center;
@@ -139,7 +140,10 @@ a {
 .file-uploader_input {
   position: absolute;
   width: 100%;
+  cursor: pointer;
   height: 100%;
+  left: 0;
+  top: 0;
   opacity: 0;
 }
 
