--- a/wasd-form/styles/store.module.css
+++ b/wasd-form/styles/store.module.css
@@ -1,36 +1,35 @@
 .shop_container {
-    margin-top: 100px;
-    padding: 0px 50px;
+    margin-top: 0px;
+    padding: 0px 0px;
 }
 
 .shop_header {
     width: 100%;
     height: auto;
-    padding: 20px 0px;
-    background-color: grey;
-    text-align: center;
+    min-height: 350px;
+    padding: 0px 100px;
+    display: flex;
+    align-items: center;
+    background-color:  rgba(0, 0, 0, 0.5);
 }
 
 .item_card_container {
     width: 250px;
     height: auto;
     min-height: 250px;
-
+    padding: 10px 30px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
     background-color: var(--bg-secondary);
 }
 
 .shop_items {
-    padding: 50px 0px;
-}
-
-.item_card_container .item_banner {
-    width: 100%;
-    height: 150px;
-    object-fit: cover;
+    padding: 50px 50px;
 }
 
 .item_card_container .item_info {
-    margin-left: 10px;
     margin-top: 10px;
 }
 
@@ -57,6 +56,23 @@
 .item_price{
     margin-top: 5px;
     margin-bottom: 5px;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.currency {
+    font-weight: 400;
     font-size: 16px;
+}
+
+.view_item {
+    
+    padding: 10px 30px;
+    border: none;
+    border-radius: 7px;
+    font-family: "Roboto";
+    background-color: var(--purple);
+    color: white;
+    font-size: 15px;
     font-weight: 400;
 }
