--- a/wasd-form/styles/vars.css
+++ b/wasd-form/styles/vars.css
@@ -3,7 +3,7 @@
     --bg-secondary: #161616;
     --bg-lighter: #2b2a2a;
     --txt-color: white;
-    --bg-purple: #5e06a7;
+    --bg-purple: #59116e;
     --bg-pink: #61085e;
 
     --border-1: purple;
