--- a/wasd-form/styles/store.module.css
+++ b/wasd-form/styles/store.module.css
@@ -14,9 +14,12 @@
 }
 
 .item_card_container {
+    transition: all 0.3s ease;
     width: 240px;
     height: auto;
     min-height: 250px;
+    float: left;
+    margin-left: 20px;
     padding: 10px 30px;
     border-radius: 10px;
     display: flex;
@@ -24,6 +27,10 @@
     justify-content: space-around;
     background-color: var(--bg-secondary);
     border: 1px solid var(--bg-lighter);
+}
+
+.item_card_container:hover {
+    background-color: var(--bg-lighter);
 }
 
 .shop_items {
