--- a/wasd-form/styles/fourms.module.css
+++ b/wasd-form/styles/fourms.module.css
@@ -719,3 +719,9 @@
     margin-top: 10px;
     margin-left: 0px;
 }
+
+.base_topic_container {
+    padding: 0px 20px;
+    min-width: 500px;
+    max-width: 800px;
+}
