--- a/wasd-form/styles/fourms.module.css
+++ b/wasd-form/styles/fourms.module.css
@@ -42,11 +42,7 @@
     border: 1px solid white;
 }
 
-@media (max-width: 1664px) {
-    .main_container{
-        padding: 40px 30px;
-    }
-}
+
 
 
 @media (max-width: 700px) {
@@ -169,6 +165,7 @@
 }
 
 .topic_card_container {
+    margin-top: 10px;
     display: flex;
     border-left: 5px solid var(--pink);
     align-items: center;
@@ -658,6 +655,7 @@
 }
 
 .user_post_cards .fourm_post_container{
+    cursor: pointer;
     border-radius: 7px;
     background-color: var(--bg-lighter) !important;
 }
