--- a/wasd-form/styles/fourms.module.css
+++ b/wasd-form/styles/fourms.module.css
@@ -43,7 +43,9 @@
 }
 
 
-
+.spacer {
+ 
+}
 
 @media (max-width: 700px) {
     .topic_title {
@@ -83,6 +85,7 @@
     width: 100% !important;
     max-width: 1564px;
     padding: 0px 30px;
+    margin-top: 50px;
 }
 
 .fourm_right_sidebar {
@@ -114,13 +117,13 @@
     width: 100%;
     height: auto;
     min-height: 50px;
-    background-color: var(--bg-secondary);
+
     border-radius: 0px;
     padding: 3px 0px;
 }
 
 .category_top_header {
-    padding: 0px 20px;
+    padding: 0px 5px;
     width: 100%;
     display: flex;
     align-items: center;
@@ -132,11 +135,11 @@
     margin-left: auto;
     color: white;
     background-color: var(--pink);
-    padding: 0px 15px;
+    padding: 0px 10px;
     border: none;
     font-family: "Roboto", sans-serif;
     font-size: 15px;
-    border-radius: 7px;
+    border-radius: 2px;
     margin-left: 10px;
 }
 
@@ -145,13 +148,17 @@
 }
 
 .category_topics_container {
-    padding: 10px;
+    padding: 3px;
+    background-color: var(--bg-secondary);
+    border-radius: 7px;
+    border-top: 3px solid var(--purple);
 }
 
 .category_header {
     display: inline-block;
     font-size: 18px;
-    font-weight: 400;
+    color:white;    
+    font-weight: 600;
 }
 
 .fourm_content {
@@ -167,7 +174,6 @@
 .topic_card_container {
     margin-top: 10px;
     display: flex;
-    border-left: 5px solid var(--pink);
     align-items: center;
     cursor: pointer;
     padding: 2px 20px;
@@ -219,7 +225,6 @@
     align-items: center;
     justify-content: center;
     margin-right: 15px;
-    background-color: var(--bg-lighter);
     border-radius: 50px;
 }
 
@@ -258,10 +263,9 @@
 }
 
 .topic_header .header {
-    font-size: 22px;
-    font-weight: bold;
-    margin-bottom: 5px;
-    font-weight: 400;
+    font-size: 30px;
+    font-weight: 600;
+    margin-bottom: 10px;
 }
 
 .thread_create {
@@ -329,7 +333,8 @@
     width: 100%;
     height: auto;
     background-color: var(--bg-secondary);
-    border-radius: 0px;
+    border-radius: 7px;
+    border: 2px solid var(--bg-lighter);
 }
 
 
