--- a/wasd-form/styles/admin.module.css
+++ b/wasd-form/styles/admin.module.css
@@ -152,3 +152,13 @@
     background-color: red;
     margin-left: 10px;
 }
+
+.admin_download_card {
+    display: inline-block;
+    min-width: 300px;
+    min-height: 150px;
+    margin-left: 10px;
+    margin-top: 10px;
+    background-color: var(--bg-lighter);
+    padding: 10px 20px;
+}
