--- a/wasd-form/styles/admin.module.css
+++ b/wasd-form/styles/admin.module.css
@@ -6,6 +6,10 @@
     background-color: var(--bg-secondary);
 }
 
+.spacer {
+    height: 20px;
+}
+
 .admin_root {
     position: absolute;
     left: 250px;
