--- a/wasd-form/styles/admin.module.css
+++ b/wasd-form/styles/admin.module.css
@@ -1,9 +1,16 @@
 .navbar_root {
-    height: 100%;
-    width: 250px;
-    position: absolute;
+    display: relative;
+    position: relative;
+    min-height: 100%;
+    min-width: 250px;
     left: 0;
     background-color: var(--bg-secondary);
+}
+
+.admin_layout_root {
+    display: flex;
+    min-height: 100vh;
+    width: 100%;
 }
 
 .spacer {
@@ -11,8 +18,9 @@
 }
 
 .admin_root {
-    position: absolute;
-    left: 250px;
+    position: relative;
+    height: 100%;
+    width: 100%;
     top: 50px;
 }
 
@@ -54,6 +62,7 @@
 
 .dashboard_container {
     padding: 10px 30px;
+    width: 100%;
 }
 
 .dash_items_container {
@@ -165,4 +174,11 @@
     margin-top: 10px;
     background-color: var(--bg-lighter);
     padding: 10px 20px;
+}
+
+.dashboard_centered {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
