--- a/wasd-form/styles/fourms.module.css
+++ b/wasd-form/styles/fourms.module.css
@@ -1,6 +1,6 @@
 .main_container {
     display: flex;
-    max-width: 100%;
+    min-width: 100%;
     padding: 0px 0px;
     margin: 0 auto;
     flex-direction: column;
