--- a/wasd-form/styles/globals.css
+++ b/wasd-form/styles/globals.css
@@ -7,7 +7,21 @@ body {
   color: var(--white) !important;
   background-color: var(--main-bg) !important;
   font-family: "Roboto", sans-serif !important;
+  min-height: 100vh !important;
+  min-height: -webkit-fill-available;
 }
+
+.page_container {
+  min-width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+body {
+  min-height: 100vh !important;
+}
+
 
 a {
   color: inherit;
@@ -256,4 +270,66 @@ a {
  max-width: 200px;
  min-height: 100px;
  object-fit: cover; 
+}
+
+.footer {
+  margin-top: auto;
+  position: relative;
+  width: 100%;
+  padding: 0px 10%;
+  display: flex;
+  height: 250px;
+  background-color: var(--bg-secondary);
+}
+
+
+
+.footer-col {
+  margin-top: 10px;
+  min-width: 200px;
+  margin-right: 100px;
+}
+
+.footer-col h3 {
+  color: var(--purple);
+} 
+
+.footer-site-desc {
+  color: grey;
+  max-width: 350px;
+  font-size: 14px;
+}
+
+.footer-top-spacer {
+  height: 100px !important;
+}
+
+
+.footer-col ul {
+  padding: 0;
+  list-style-type: none;
+}
+
+.footer-col ul li {
+  padding: 5px 0px; 
+  color: grey;
+}
+
+.line-spacer {
+  height: 2px;
+  width: 100%;
+  background-color: rgb(31, 31, 31);
+}
+
+.site-credits a {
+  color: pink;
+}
+
+.site-credits {
+  color: grey;
+  font-size: 14px;
+}
+
+.fullheight {
+  min-height: 100vh;
 }
