--- a/wasd-form/styles/admin.module.css
+++ b/wasd-form/styles/admin.module.css
@@ -182,3 +182,29 @@
     align-items: center;
     width: 100%;
 }
+
+.multiselector_container {
+    padding: 10px 25px;
+    min-height: 150px;
+    width: 100%;
+    background-color: var(--bg-lighter);
+    border-radius: 7px;
+}
+
+.multiselector_selected {
+
+}
+
+.multiselector_select_bubble {
+    display: inline-block;   
+    padding: 2px 10px;
+    background-color: var(--bg-secondary);
+    margin-left: 10px;
+    border-radius: 10px;
+    margin-top: 5px;
+}
+
+.multiselector_select_bubble p {
+    font-size: 15px;
+
+}
