--- a/wasd-form/styles/admin.module.css
+++ b/wasd-form/styles/admin.module.css
@@ -208,3 +208,15 @@
     font-size: 15px;
 
 }
+
+.user_avatar_editing {
+    height: 150px;
+    display: block;
+    margin-bottom: 10px;
+}
+
+.user_banner_editing {
+    height: 150px;
+    width: 100%;
+    object-fit: cover;
+}
